# 2025_Coding-Challenge_STACKIT-Cloud-AcceleratorV2

./: README.md  pyproject.toml  resources.md
src/: dependencies.py  main.py
src/bot/: telegram_bot.py
src/routers/: notification_router.py
src/schema/: notification_schema.py
src/storage/: notifications_in_memory.py
src/tests/: api_test.py
tests/: api_test.py
